<package format="3">
  <name>multi_interface_roam</name>
  <version>1.1.0</version>
  <description>sdsdddsdsds</description>
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>

  <license>BSD</license>
  <license>LGPL</license>
  <license>GPL for sigblock</license>

  <url type="website">http://ros.org/wiki/multi_interface_roam</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Blaise Gassend</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>rospy</build_depend>
  <build_depend>network_monitor_udp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>pr2_msgs</build_depend>
  <build_depend>asmach</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>ieee80211_channels</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>network_monitor_udp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>pr2_msgs</exec_depend>
  <exec_depend>asmach</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>ieee80211_channels</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-twisted-core</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-twisted</exec_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>network_monitor_udp</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>diagnostic_msgs</test_depend> -->
  <!-- <test_depend>pr2_msgs</test_depend> -->
  <!-- <test_depend>wpa_supplicant_node</test_depend> -->
  <!-- <test_depend>asmach</test_depend> -->
  <!-- <test_depend>dynamic_reconfigure</test_depend> -->
  <!-- <test_depend>ieee80211_channels</test_depend> -->

</package>
